--- a/thesis_ref.bib
+++ b/thesis_ref.bib
@@ -1,12 +1,35 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Kevin Song at 2019-01-25 14:37:23 -0600 
+%% Created for Kevin Song at 2019-01-29 15:37:15 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{ritchie2009,
+	Author = {Ritchie, TK and Grinkova, YV and Bayburt, TH and Denisov, IG and Zolnerciks, JK and Atkins, WM and Sligar, SG},
+	Date-Added = {2019-01-29 21:37:05 +0000},
+	Date-Modified = {2019-01-29 21:37:14 +0000},
+	Journal = {Methods in enzymology},
+	Pages = {211--231},
+	Publisher = {Elsevier},
+	Title = {Reconstitution of membrane proteins in phospholipid bilayer nanodiscs},
+	Volume = {464},
+	Year = {2009}}
+
+@article{hagn2013,
+	Author = {Hagn, Franz and Etzkorn, Manuel and Raschle, Thomas and Wagner, Gerhard},
+	Date-Added = {2019-01-29 21:29:47 +0000},
+	Date-Modified = {2019-01-29 21:29:51 +0000},
+	Journal = {Journal of the American Chemical Society},
+	Number = {5},
+	Pages = {1919--1925},
+	Publisher = {ACS Publications},
+	Title = {Optimized phospholipid bilayer nanodiscs facilitate high-resolution structure determination of membrane proteins},
+	Volume = {135},
+	Year = {2013}}
 
 @article{tilegenova2016,
 	Author = {Tilegenova, Cholpon and Vemulapally, Spandana and Cortes, Doris M and Cuello, Luis G},
